dodane druge slike, cjenik updatean

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,17 +3,18 @@
     
       <div class="w3-container w3-cell" >
           <h4>KONTAKT</h4>
-        <p class="w3-small"><i class="fas fa-map-marker-alt"></i> Vere Bratonje 29, Rijeka</p>
-        <p class="w3-small"><i class="fas fa-mobile-alt"></i> +385 91 418 2000</p>
-        
+        <p class="w3-small"><a href="https://goo.gl/maps/qM3R67rdME5wxDuX7"><i class="fas fa-map-marker-alt"></i> Vere Bratonje 29, Rijeka</a></p>
+        <p class="w3-small"><a href="tel:+385914182000"><i class="fas fa-mobile-alt"></i> +385 91 418 2000</a></p>
+       
         <p class="w3-small">Radno vrijeme:<br>svakim danom 07-22</p>
       </div>
     
       <div class="w3-container w3-cell w3-xlarge w3-center">
         <h4>DRUŠTVENE MREŽE</h4>
-              <i class="fab fa-facebook"></i>
-                 <i class="fab fa-whatsapp w3-margin"></i>
-                <i class="fab fa-viber"></i>
+              <a href="https://www.facebook.com/profile.php?id=1165940456"><i class="fab fa-facebook"></i></a>
+              <a href="https://api.whatsapp.com/send?phone=+385914182000"><i class="fab fa-whatsapp w3-margin"></i></a>
+              <a href="viber://contact?number=+385914182000"><i class="fab fa-viber w3-margin-right"></i></a>
+              <a href="https://www.instagram.com/dama_wash/"><i class="fab fa-instagram"></i></a>
         
       </div>
     
