--- a/src/app/naslovna/naslovna.component.html
+++ b/src/app/naslovna/naslovna.component.html
@@ -5,25 +5,16 @@
     </div>
     </div>
     
-      <div class="w3-content w3-display-container slike" style="max-width:900px;max-height:480px;overflow:hidden">
+      <div class="w3-content w3-display-container slike" style="max-width:900px;overflow:hidden"><!--max-height:480px;-->
     
       <!-- Slideshow -->
       <div class="mySlides w3-animate-opacity" style="display: block;">
-        <img src="assets/images/garnitura_slika.png" style="width:100%">
-        <div class="centrirano w3-text-white w3-container w3-padding-32">
-          <span class="w3-padding-large" style="text-transform: uppercase;">Čišćenje profesionalnom opremom</span>
+        <img src="assets/images/before_after1.jpg" style="width:100%" ngModel #firstimage>
+        <div class="bottom-left w3-text-white w3-container w3-padding-32">
+          <span class="w3-padding-large">Prije</span>
         </div>
-      </div>
-      <div class="w3-display-container mySlides w3-animate-opacity" style="display: none;">
-        <img src="assets/images/slika_auta.jpg" style="width:100%">
-        <div class="centrirano w3-text-white w3-container w3-padding-32">
-          <span class="w3-padding-large" style="text-transform: uppercase;">Interijera u autima, kombijima, autobusima...</span>
-        </div>
-      </div>
-      <div class="w3-display-container mySlides w3-animate-opacity" style="display: none;">
-        <img src="assets/images/slika_jahte.jpg" style="width:100%">
-        <div class="centrirano w3-text-white w3-container w3-padding-32">
-          <span class="w3-padding-large" style="text-transform: uppercase;">Čišćenje jahti</span>
+        <div class="bottom-right w3-text-white w3-container w3-padding-32">
+          <span class="w3-padding-large">Poslije</span>
         </div>
       </div>
     <!--<button class="w3-button w3-light-grey noselection w3-display-left" onclick="plusDivs(-1)">❮</button>
