--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -6,44 +6,36 @@
       <th>Cijena</th>
     </tr>
     <tr>
-      <td>Stolica</td>
-      <td>20/30</td>
+      <td>Dubinsko čišćenje automobila (sva sjedišta, pod, bunker)</td>
+      <td>400</td>
     </tr>
     <tr>
-      <td>Tabure</td>
+      <td>+ vanjsko čišćenje automobila</td>
       <td>50</td>
     </tr>
     <tr>
+      <td>Klasična i L garnitura</td>
+      <td>300</td>
+    </tr>
+    <tr>
       <td>Fotelja</td>
-      <td>90</td>
+      <td>150</td>
     </tr>
     <tr>
       <td>Dvosjed</td>
       <td>200</td>
     </tr>
     <tr>
-      <td>Trosjed</td>
-      <td>250</td>
+      <td>Stolica</td>
+      <td>25</td>
     </tr>
     <tr>
-      <td>Kutne garniture</td>
-      <td>300</td>
+      <td>Trosjed, dvosjed i fotelja</td>
+      <td>500</td>
     </tr>
     <tr>
-      <td>Fotelja + dvosjed + trosjed</td>
-      <td>400</td>
-    </tr>
-    <tr>
-      <td>Madrac za 1. osobu (obostrano)</td>
-      <td>100</td>
-    </tr>
-    <tr>
-      <td>Madrac za 2. osobe (obostrano)</td>
-      <td>200</td>
-    </tr>
-    <tr>
-      <td>Cijeli automobil (sjedišta + podovi + vrata + bunker)</td>
-      <td>350</td>
+      <td>Poliranje farova od</td>
+      <td>75</td>
     </tr>
   </table>  
 <h4 class="w3-center w3-padding">Za sve ostalo po dogovoru.</h4>
