add 404, naslovna form module fix, shark animation on open menu

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,6 @@
+<h2>O nama</h2>
 <div class="w3-roboto w3-large">
-    <p class="w3-padding-16"><b>Naše usluge dostupne su 7 dana u tjednu  privatnim i poslovnim klijentima u Rijeci i okolici, a po potrebi i dalje.</b></p>
+    <p style="padding-bottom:16px"><b>Naše usluge dostupne su 7 dana u tjednu  privatnim i poslovnim klijentima u Rijeci i okolici, a po potrebi i dalje.</b></p>
     <table class="w3-table w3-bordered w3-mobile">
         <tr>
             <td>Vlasnik</td>
