--- a/src/app/naslovna/naslovna.component.html
+++ b/src/app/naslovna/naslovna.component.html
@@ -9,7 +9,7 @@
     
       <!-- Slideshow -->
       <div class="mySlides w3-animate-opacity" style="display: block;">
-        <img src="assets/images/before_after1.jpg" style="width:100%" ngModel #firstimage>
+        <img src="assets/images/before_after1.jpg" style="width:100%" #firstimage>
         <div class="bottom-left w3-text-white w3-container w3-padding-32">
           <span class="w3-padding-large">Prije</span>
         </div>
