--- a/src/app/usluge/usluge.component.html
+++ b/src/app/usluge/usluge.component.html
@@ -1,5 +1,5 @@
-<br>
-<h1>Naše usluge</h1><ul class="w3-ul" style="font-size: 1.2em;">
+<h2>Naše usluge</h2>
+<ul class="w3-ul" style="font-size: 1.2em;">
     <li>Čišćenje tapiciranog namještaja i madraca</li>
     <li>Generalno čišćenje kuća, vila i plovila</li>
     <li>Čišćenje poslovnih objekata</li>
