--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,6 +1,6 @@
-<br>
+<h2>Kontaktirajte nas</h2>
     <div class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin">
-<h2 class="w3-center">Kontaktirajte nas</h2>
+
  
 <div class="w3-row w3-section">
   <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
@@ -34,9 +34,7 @@
 
 </div>
 {{ body }}
-<br>
 <h3>Naša lokacija:</h3>
-<br>
 <div class="mapouter" style="background-color: #ccc;">
     <div class="gmap_canvas">
         <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Vukovarska%2018%2C%20Rijeka&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
