--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,7 +5,7 @@
   
 
       <div class="w3-container w3-cell w3-padding-xlarge  w3-cell-middle" style="padding-left: 0;">
-       <img class="w3-image  w3-animate-left" src="assets/images/logo_80px.png" style="height: 80px;">
+       <img [@openClose]="opened ? 'open' : 'closed'" class="w3-image w3-animate-left" src="assets/images/logo_80px.png" style="height: 80px;">
      </div>
      
      <div class="w3-container w3-cell" style="padding:0;min-width: 224px;">
@@ -20,11 +20,11 @@
             <button class="w3-button w3-xlarge w3-hide-medium w3-hide-large w3-mobile" id="navigacijaopen" style="color:white;" (click)="goggle()">{{ opened ? '&times;' : '&#9776;' }}</button>
             <div class="moje w3-indigo" id="navigacija" [ngClass]="!opened ? 'w3-hide-small' : ''" style="position:absolute;">
                 <!--<button class="w3-bar-item w3-button w3-large w3-hide-medium w3-hide-large w3-mobile" (click)="goggle()">Zatvori &times;</button>-->
-                <a class="w3-bar-item w3-button w3-mobile" (click)="navigateToHome()">Naslovna</a>
-                <a class="w3-bar-item w3-button w3-mobile" (click)="navigateToServices()">Usluge</a>
-                <a class="w3-bar-item w3-button w3-mobile" (click)="navigateToPrices()">Cjenik</a>
-                <a class="w3-bar-item w3-button w3-mobile" (click)="navigateToAbout()">O nama</a>
-                <a class="w3-bar-item w3-button w3-mobile" (click)="navigateToContact()" style="float:right">Kontakt</a>
+                <a class="w3-bar-item w3-button w3-mobile" routerLink="" (click)="navigateToHome()">Naslovna</a>
+                <a class="w3-bar-item w3-button w3-mobile" routerLink="/services" (click)="navigateToServices()">Usluge</a>
+                <a class="w3-bar-item w3-button w3-mobile" routerLink="/prices" (click)="navigateToPrices()">Cjenik</a>
+                <a class="w3-bar-item w3-button w3-mobile" routerLink="/about" (click)="navigateToAbout()">O nama</a>
+                <a class="w3-bar-item w3-button w3-mobile" routerLink="/contact" (click)="navigateToContact()" style="float:right">Kontakt</a>
             </div>
         </div>
     </div>	
