--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -21,7 +21,7 @@
     </table>
     <br>
     
-    <a href="/contact"><div class="w3-panel w3-blue w3-card-4 w3-center">
+    <a routerLink="/contact"><div class="w3-panel w3-blue w3-card-4 w3-center">
       <p>SLOBODNO NAM SE OBRATITE ZA  NEOBAVEZNU I BESPLATNU PONUDU!</p>
     </div></a>
     
