--- a/src/app/naslovna/naslovna.component.html
+++ b/src/app/naslovna/naslovna.component.html
@@ -1,7 +1,7 @@
 <div class="w3-panel w3-padding-16 w3-roboto w3-large">
 
     <div style="text-align: center;">
-        <b>Nudimo profesionalne usluge čišćenja koje obavljamo koristeći najmodernije strojeve i  ekološka sredstva za čišćenje.</b> <br><br>Slobodno nam se obratite s povjerenjem, a mi ćemo Vam uzvratiti kvalitetnom i profesionalnom uslugom.
+        <b>Nudimo profesionalne usluge čišćenja koje obavljamo koristeći najmodernije strojeve i ekološka sredstva za čišćenje.</b><br><br>Slobodno nam se obratite s povjerenjem, a mi ćemo Vam uzvratiti kvalitetnom i profesionalnom uslugom.
     </div>
     </div>
     
@@ -21,11 +21,15 @@
     <button class="w3-button w3-light-grey noselection w3-display-right" onclick="plusDivs(+1)">❯</button>-->
     </div>
     
-    
-    <div class="w3-panel nota w3-padding-32 w3-roboto">
-      <h3>Ponude</h3>
-      <p>Uslikajte i pošaljite određenu stvar za čišćenje, a mi ćemo Vama poslati besplatnu i neobaveznu ponudu u najkraćem mogućem roku!</p>
-      <p class="w3-center"><a href="viber://contact?number=+385914182000"><span style="color:#c40db9;">Viber</span></a> | <a href="https://api.whatsapp.com/send?phone=+385914182000"><span style="color:#61ff61;">WhatsApp</span></a> | <a href="http://m.me/1165940456"><span style="color:#8ee3ff;">Messenger</span></a></p>
-    </div>
+<div class="container w3-margin-bottom"  style="text-align: center;">
+  <p style="font-size:20px">Nudimo i najam Karcher strojeva.</p>
+    <img class="w3-image" alt="Najam Karcher strojeva" title="Najam Karcher strojeva" src="assets/images/297573592_930676484519460_3984140162036203416_n.jpg">
+  </div>
+
+  <div class="w3-panel nota w3-padding-32 w3-roboto">
+    <h3>Ponude</h3>
+    <p>Uslikajte i pošaljite određenu stvar za čišćenje, a mi ćemo Vama poslati besplatnu i neobaveznu ponudu u najkraćem mogućem roku!</p>
+    <p class="w3-center"><a href="viber://contact?number=+385914182000"><span style="color:#c40db9;">Viber</span></a> | <a href="https://api.whatsapp.com/send?phone=+385914182000"><span style="color:#61ff61;">WhatsApp</span></a> | <a href="http://m.me/1165940456"><span style="color:#8ee3ff;">Messenger</span></a></p>
+  </div>
     
     <!--<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Vukovarska%2018%2C%20Rijeka&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de">Pureblack.de - Webseite erstellen lassen</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>-->
