--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -21,7 +21,7 @@
             <div class="moje w3-indigo" id="navigacija" [ngClass]="!opened ? 'w3-hide-small' : ''" style="position:absolute;">
                 <!--<button class="w3-bar-item w3-button w3-large w3-hide-medium w3-hide-large w3-mobile" (click)="goggle()">Zatvori &times;</button>-->
                 <a class="w3-bar-item w3-button w3-mobile" routerLink="" (click)="navigateToHome()">Naslovna</a>
-                <a class="w3-bar-item w3-button w3-mobile" routerLink="/services" (click)="navigateToServices()">Usluge</a>
+                <!--<a class="w3-bar-item w3-button w3-mobile" routerLink="/services" (click)="navigateToServices()">Usluge</a>-->
                 <a class="w3-bar-item w3-button w3-mobile" routerLink="/prices" (click)="navigateToPrices()">Cjenik</a>
                 <a class="w3-bar-item w3-button w3-mobile" routerLink="/about" (click)="navigateToAbout()">O nama</a>
                 <a class="w3-bar-item w3-button w3-mobile" routerLink="/contact" (click)="navigateToContact()" style="float:right">Kontakt</a>
