kune u dvojne cijene

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -3,7 +3,7 @@
     
       <div class="w3-container w3-cell" >
           <h4>KONTAKT</h4>
-        <p class="w3-small"><a href="https://goo.gl/maps/qM3R67rdME5wxDuX7"><i class="fas fa-map-marker-alt"></i> Vere Bratonje 29, Rijeka</a></p>
+        <p class="w3-small"><a href="https://goo.gl/maps/qM3R67rdME5wxDuX7"><i class="fas fa-map-marker-alt"></i> Bujska 36, Rijeka</a></p>
         <p class="w3-small"><a href="tel:+385914182000"><i class="fas fa-mobile-alt"></i> +385 91 418 2000</a></p>
        
         <p class="w3-small">Radno vrijeme:<br>svakim danom 07-22</p>
