--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -1,5 +1,5 @@
 <h2>Cjenik</h2>
-<p>U cijene je uključen PDV</p>
+<p>U cijene je uključen PDV.</p>
   <table class="w3-table w3-blue">
     <tr style="background-color: #3f51b5">
       <th>Objekt</th>
@@ -7,35 +7,37 @@
     </tr>
     <tr>
       <td>Dubinsko čišćenje automobila (sva sjedišta, pod, bunker)</td>
-      <td>400</td>
+      <td>60 € (452.07 kn)</td>
     </tr>
     <tr>
-      <td>+ vanjsko čišćenje automobila</td>
-      <td>50</td>
+      <td style="padding-left:30px">+ vanjsko čišćenje automobila</td>
+      <td>10 € (75.53 kn)</td>
     </tr>
     <tr>
       <td>Klasična i L garnitura</td>
-      <td>300</td>
+      <td>40/50 € (301.38/376.73 kn)</td>
     </tr>
     <tr>
       <td>Fotelja</td>
-      <td>150</td>
+      <td>25 € (188.36 kn)</td>
     </tr>
     <tr>
       <td>Dvosjed</td>
-      <td>200</td>
+      <td>35 € (263.71 kn)</td>
     </tr>
     <tr>
       <td>Stolica</td>
-      <td>25</td>
+      <td>3-6 € (22.60-45.21 kn)</td>
     </tr>
     <tr>
       <td>Trosjed, dvosjed i fotelja</td>
-      <td>500</td>
+      <td>80 € (602.76 kn)</td>
     </tr>
     <tr>
-      <td>Poliranje farova od</td>
-      <td>75</td>
+      <td>Poliranje farova (oba)</td>
+      <td>30 € (226.04 kn)</td>
     </tr>
-  </table>  
+  </table>
+  <p class="w3-center w3-padding">TEČAJ: 1 EUR = 7.53450 HRK</p>
 <h4 class="w3-center w3-padding">Za sve ostalo po dogovoru.</h4>
+<br>
