--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,44 +1,48 @@
 <h2>Kontaktirajte nas</h2>
-    <div class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin">
-
- 
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
-    <div class="w3-rest">
-      <input class="w3-input w3-border" name="first" type="text" [(ngModel)]="imePrezime" placeholder="Ime i prezime">
-    </div>
+<div class="w3-container w3-xlarge w3-center">
+  <h4>Javite se putem društvenih mreža</h4>
+  <a href="https://www.facebook.com/profile.php?id=1165940456"><i class="fab fa-facebook largetext"></i></a>
+  <a href="https://api.whatsapp.com/send?phone=+385914182000"><i class="fab fa-whatsapp w3-margin largetext"></i></a>
+  <a href="viber://contact?number=+385914182000"><i class="fab fa-viber w3-margin-right largetext"></i></a>
+  <a href="https://www.instagram.com/dama_wash/"><i class="fab fa-instagram largetext"></i></a>
+  <h4>ili elektroničkom poštom</h4>
 </div>
+<div class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin">
+  <div class="w3-row w3-section">
+    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
+      <div class="w3-rest">
+        <input class="w3-input w3-border" name="first" type="text" [(ngModel)]="imePrezime" placeholder="Ime i prezime">
+      </div>
+  </div>
 
-<!--<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-envelope-o"></i></div>
-    <div class="w3-rest">
-      <input class="w3-input w3-border" name="email" type="text" placeholder="E-mail">
-    </div>
-</div>-->
+  <!--<div class="w3-row w3-section">
+    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-envelope-o"></i></div>
+      <div class="w3-rest">
+        <input class="w3-input w3-border" name="email" type="text" placeholder="E-mail">
+      </div>
+  </div>-->
 
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-phone"></i></div>
-    <div class="w3-rest">
-      <input class="w3-input w3-border" name="phone" type="text"[(ngModel)]="mobitel"  placeholder="Mobitel/telefon (opcionalno)">
-    </div>
+  <div class="w3-row w3-section">
+    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-phone"></i></div>
+      <div class="w3-rest">
+        <input class="w3-input w3-border" name="phone" type="text"[(ngModel)]="mobitel"  placeholder="Mobitel/telefon (neobavezno)">
+      </div>
+  </div>
+
+  <div class="w3-row w3-section">
+    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-pencil"></i></div>
+      <div class="w3-rest">
+        <textarea class="w3-input w3-border" name="message" type="text"[(ngModel)]="poruka"  placeholder="Poruka" rows="4"></textarea>
+      </div>
+  </div>
+
+  <button class="w3-button w3-block w3-section w3-blue w3-ripple w3-padding" (click)="sendMail()">Otvori Gmail</button>
+
 </div>
-
-<div class="w3-row w3-section">
-  <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-pencil"></i></div>
-    <div class="w3-rest">
-      <textarea class="w3-input w3-border" name="message" type="text"[(ngModel)]="poruka"  placeholder="Poruka" rows="4"></textarea>
-    </div>
-</div>
-
-<button class="w3-button w3-block w3-section w3-blue w3-ripple w3-padding" (click)="sendMail()">Pošalji</button>
-
-</div>
-{{ body }}
 <h3>Naša lokacija:</h3>
-<div class="mapouter" style="background-color: #ccc;">
+<div class="mapouter">
     <div class="gmap_canvas">
-        <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Vukovarska%2018%2C%20Rijeka&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-        <a href="https://www.pureblack.de">Pureblack.de - Webseite erstellen lassen</a>
+        <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Bujska%2036%2C%20Rijeka&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
     <style>.mapouter{position:relative;text-align:right;margin-bottom: 20px;}.gmap_canvas {overflow:hidden;background:none!important; }</style>
 </div>
