change logo to .svg and don't squash it

--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -5,7 +5,7 @@
   
 
       <div class="w3-container w3-cell w3-padding-xlarge  w3-cell-middle" style="padding-left: 0;">
-       <img [@openClose]="opened ? 'open' : 'closed'" class="w3-image w3-animate-left" src="assets/images/logo_80px.png" style="height: 80px;">
+       <img [@openClose]="opened ? 'open' : 'closed'" class="w3-image w3-animate-left" src="assets/images/shark2.svg" style="width: 122px;">
      </div>
      
      <div class="w3-container w3-cell" style="padding:0;min-width: 224px;">
