--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -1,7 +1,7 @@
 <h2>Cjenik</h2>
 <p>U cijene je uključen PDV.</p>
-  <table class="w3-table w3-blue">
-    <tr style="background-color: #3f51b5">
+  <table class="w3-table" style="background-color: #0096d8;color:white">
+    <tr style="background-color: #4d4b62">
       <th>Objekt</th>
       <th>Cijena</th>
     </tr>
