--- a/src/app/prices/prices.component.scss
+++ b/src/app/prices/prices.component.scss
@@ -2,6 +2,6 @@ tr td:nth-child(2):after {
     /*content:' kn';*/
   }
   
-tr:nth-child(even) {background: #60B9FF}
+tr:nth-child(even) {background: #00b1ff}
 
 td{min-width: 80px;}
