--- a/src/styles.scss
+++ b/src/styles.scss
@@ -53,7 +53,8 @@ body{color: #444;}
 }
 $footer-height: 300px;
 .moje{max-width:1200px;margin-left:auto;margin-right:auto;}
-.footer{height: $footer-height;}
+.moje2{max-width:1200px;width:100vw;margin-left:auto;margin-right:auto;}
+/*.footer{height: $footer-height;}*/
 .topandcontent{min-height: calc(100vh - $footer-height);}
 .w3-ul li {
-  padding: 8px 0px;}
+  padding: 8px 0px;}/*4d4b62  9cdbf1  0096d8*/
