--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -7,7 +7,7 @@
     </tr>
     <tr>
       <td>Dubinsko čišćenje automobila (sva sjedišta, pod, bunker)</td>
-      <td>60 € (452.07 kn)</td>
+      <td>70 € (527.42 kn)</td>
     </tr>
     <tr>
       <td style="padding-left:30px">+ vanjsko čišćenje automobila</td>
@@ -15,7 +15,7 @@
     </tr>
     <tr>
       <td>Klasična i L garnitura</td>
-      <td>40/50 € (301.38/376.73 kn)</td>
+      <td>40/60 € (301.38/452.07 kn)</td>
     </tr>
     <tr>
       <td>Fotelja</td>
@@ -35,7 +35,15 @@
     </tr>
     <tr>
       <td>Poliranje farova (oba)</td>
-      <td>30 € (226.04 kn)</td>
+      <td>30-40 € (226.04-301.38 kn)</td>
+    </tr>
+    <tr>
+      <td>Tepih</td>
+      <td>3-5 €/m^2 (22.60-37.67 kn)</td>
+    </tr>
+    <tr>
+      <td>Čišćenje kamena</td>
+      <td>2-5 €/m^2 (15.07-37.67 kn)</td>
     </tr>
   </table>
   <p class="w3-center w3-padding">TEČAJ: 1 EUR = 7.53450 HRK</p>
