--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,7 +1,8 @@
-<h2>O nama</h2>
-<div class="w3-roboto w3-large">
-    <p style="padding-bottom:16px"><b>Naše usluge dostupne su 7 dana u tjednu  privatnim i poslovnim klijentima u Rijeci i okolici, a po potrebi i dalje.</b></p>
-    <table class="w3-table w3-bordered w3-mobile">
+<div class="moje">
+<h2 class="w3-container">O nama</h2>
+<div class="w3-roboto">
+    <!--<p style="padding-bottom:16px" class="w3-container w3-large"><b>Naše usluge dostupne su 7 dana u tjednu  privatnim i poslovnim klijentima u Rijeci i okolici, a po potrebi i dalje.</b></p>-->
+    <table class="w3-table w3-bordered w3-large">
         <tr>
             <td>Vlasnik</td>
             <td>Marko Šimpraga</td>
@@ -11,7 +12,7 @@
             <td><a href="tel:+385914182000">091 418 2000</a></td>
         </tr>
         <tr>
-            <td>Mail</td>
+            <td>E-mail</td>
             <td><a href="mailto:info.damawash@gmail.com">info.damawash@gmail.com</a></td>
         </tr>
         <tr>
@@ -21,8 +22,9 @@
     </table>
     <br>
     
-    <a routerLink="/contact"><div class="w3-panel w3-blue w3-card-4 w3-center">
+    <a routerLink="/contact"><div class="w3-panel w3-blue w3-card-4 w3-center  w3-large">
       <p>SLOBODNO NAM SE OBRATITE ZA  NEOBAVEZNU I BESPLATNU PONUDU!</p>
     </div></a>
     
     </div>
+</div>
