--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,4 +1,5 @@
-<h2>Kontaktirajte nas</h2>
+<div class="moje">
+<h2 class="w3-container">Kontaktirajte nas</h2>
 <div class="w3-container w3-xlarge w3-center">
   <h4>Javite se putem društvenih mreža</h4>
   <a href="https://www.facebook.com/profile.php?id=1165940456"><i class="fab fa-facebook largetext"></i></a>
@@ -39,10 +40,11 @@
   <button class="w3-button w3-block w3-section w3-blue w3-ripple w3-padding" (click)="sendMail()">Otvori Gmail</button>
 
 </div>
-<h3>Naša lokacija:</h3>
+<h3 class="w3-container">Naša lokacija:</h3>
 <div class="mapouter">
     <div class="gmap_canvas">
         <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Bujska%2036%2C%20Rijeka&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
     </div>
     <style>.mapouter{position:relative;text-align:right;margin-bottom: 20px;}.gmap_canvas {overflow:hidden;background:none!important; }</style>
+</div>
 </div>
