--- a/src/app/naslovna/naslovna.component.html
+++ b/src/app/naslovna/naslovna.component.html
@@ -1,35 +1,62 @@
-<div class="w3-panel w3-padding-16 w3-roboto w3-large">
+<div class="w3-roboto w3-large">
+    <div style="text-align: center;background: #21bbff;color:white" class="w3-padding-16 ">
+        <!--<span style="font-size: larger;padding:10px">Nudimo profesionalne usluge čišćenja koje obavljamo koristeći najmodernije strojeve i ekološka sredstva za čišćenje.</span>-->
+        <span style="font-size: larger;padding:10px">Naše usluge dostupne su 7 dana u tjednu  privatnim i poslovnim klijentima u Rijeci i okolici, a po potrebi i dalje.</span>
+        <br>
+        <p style="margin-top:10px;margin-bottom: 0px;font-weight: bold;"><a href="tel:+385914182000"><i class="fas fa-mobile-alt"></i> 091 418 2000</a></p>
+        <!--<br><br>Slobodno nam se obratite s povjerenjem, a mi ćemo Vam uzvratiti kvalitetnom i profesionalnom uslugom.-->
+    </div>
+</div>
+<div style="max-width: 900px;margin-bottom:20px;margin-top: 20px;" class="w3-content">
+  <div style="text-align: center;font-size: x-large;">
+    Dubinski čistimo:
+  </div>
+  <div class="w3-row">
+    <div class="w3-quarter w3-container feature">Automobile</div>
+    <div class="w3-quarter w3-container feature">Garniture</div>
+    <div class="w3-quarter w3-container feature">Fotelje</div>
+    <div class="w3-quarter w3-container feature">Dvosjede</div>
+    <div class="w3-quarter w3-container feature">Trosjede</div>
+    <div class="w3-quarter w3-container feature">Stolice</div>
+    <div class="w3-quarter w3-container feature">Tepihe</div>
+    <div class="w3-quarter w3-container feature">Kamen</div>
+  </div>
+</div>
+<div class="w3-content w3-display-container slike" style="max-width:900px;overflow:hidden"><!--max-height:480px;-->
 
-    <div style="text-align: center;">
-        <b>Nudimo profesionalne usluge čišćenja koje obavljamo koristeći najmodernije strojeve i ekološka sredstva za čišćenje.</b><br><br>Slobodno nam se obratite s povjerenjem, a mi ćemo Vam uzvratiti kvalitetnom i profesionalnom uslugom.
+  <!-- Slideshow -->
+  <div class="mySlides w3-animate-opacity" style="display: block;">
+    <img src="assets/images/before_after3.jpg" style="width:100%" #firstimage>
+    <div class="bottom-left w3-text-white w3-container w3-padding-32">
+      <span class="w3-padding-large">Prije</span>
     </div>
+    <div class="bottom-right w3-text-white w3-container w3-padding-32">
+      <span class="w3-padding-large">Poslije</span>
     </div>
-    
-      <div class="w3-content w3-display-container slike" style="max-width:900px;overflow:hidden"><!--max-height:480px;-->
-    
-      <!-- Slideshow -->
-      <div class="mySlides w3-animate-opacity" style="display: block;">
-        <img src="assets/images/before_after1.jpg" style="width:100%" #firstimage>
-        <div class="bottom-left w3-text-white w3-container w3-padding-32">
-          <span class="w3-padding-large">Prije</span>
-        </div>
-        <div class="bottom-right w3-text-white w3-container w3-padding-32">
-          <span class="w3-padding-large">Poslije</span>
-        </div>
-      </div>
-    <!--<button class="w3-button w3-light-grey noselection w3-display-left" onclick="plusDivs(-1)">❮</button>
-    <button class="w3-button w3-light-grey noselection w3-display-right" onclick="plusDivs(+1)">❯</button>-->
+    <div class="centrirano w3-text-white w3-container w3-padding-32">
+      <span class="w3-padding-large" #firsttext></span>
     </div>
+  </div>
+<!--<button class="w3-button w3-light-grey noselection w3-display-left" onclick="plusDivs(-1)">❮</button>
+<button class="w3-button w3-light-grey noselection w3-display-right" onclick="plusDivs(+1)">❯</button>-->
+</div>
     
-<div class="container w3-margin-bottom"  style="text-align: center;">
+<div class="container w3-margin-bottom moje"  style="text-align: center;">
   <p style="font-size:20px">Nudimo i najam Karcher strojeva.</p>
     <img class="w3-image" alt="Najam Karcher strojeva" title="Najam Karcher strojeva" src="assets/images/297573592_930676484519460_3984140162036203416_n.jpg">
-  </div>
+</div>
 
-  <div class="w3-panel nota w3-padding-32 w3-roboto">
-    <h3>Ponude</h3>
-    <p>Uslikajte i pošaljite određenu stvar za čišćenje, a mi ćemo Vama poslati besplatnu i neobaveznu ponudu u najkraćem mogućem roku!</p>
-    <p class="w3-center"><a href="viber://contact?number=+385914182000"><span style="color:#c40db9;">Viber</span></a> | <a href="https://api.whatsapp.com/send?phone=+385914182000"><span style="color:#61ff61;">WhatsApp</span></a> | <a href="http://m.me/1165940456"><span style="color:#8ee3ff;">Messenger</span></a></p>
-  </div>
+<div class="w3-panel nota w3-roboto moje" style="padding: 10px 20px;">
+  <h3>Ponude</h3>
+  <p>Ukoliko niste sigurni za cijenu, uslikajte i pošaljite određenu stvar za čišćenje, a mi ćemo Vam poslati besplatnu i neobaveznu ponudu u najkraćem mogućem roku!</p>
+  <!-- <p>Uslikajte i pošaljite određenu stvar za čišćenje, a mi ćemo Vama poslati besplatnu i neobaveznu ponudu u najkraćem mogućem roku!</p> -->
+  <p class="w3-center w3-large">
+    <a href="viber://contact?number=+385914182000" class="w3-padding"><span style="color:#c40db9;">Viber</span></a>
+    |
+     <a href="https://api.whatsapp.com/send?phone=+385914182000" class="w3-padding"><span style="color:#61ff61;">WhatsApp</span></a>
+    |
+      <a href="http://m.me/1165940456" class="w3-padding"><span style="color:#8ee3ff;">Messenger</span></a>
+    </p>
+</div>
     
     <!--<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Vukovarska%2018%2C%20Rijeka&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de">Pureblack.de - Webseite erstellen lassen</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>-->
