--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -1,6 +1,7 @@
-<h2>Cjenik</h2>
-<p>U cijene je uključen PDV.</p>
-  <table class="w3-table" style="background-color: #0096d8;color:white">
+<div class="moje">
+<h2 class="w3-container">Cjenik</h2>
+<p class="w3-container w3-large">U cijene je uključen PDV.</p>
+  <table class="w3-table" style="background-color: #0096d8;color:white;font-size:large">
     <tr style="background-color: #4d4b62">
       <th>Objekt</th>
       <th>Cijena</th>
@@ -49,3 +50,4 @@
   <p class="w3-center w3-padding">TEČAJ: 1 EUR = 7.53450 HRK</p>
 <h4 class="w3-center w3-padding">Za sve ostalo po dogovoru.</h4>
 <br>
+</div>
