--- a/src/app/usluge/usluge.component.html
+++ b/src/app/usluge/usluge.component.html
@@ -1,3 +1,4 @@
+<div class="moje">
 <h2>Naše usluge</h2>
 <ul class="w3-ul" style="font-size: 1.2em;">
     <li>Čišćenje tapiciranog namještaja i madraca</li>
@@ -6,3 +7,4 @@
     <li>Dubinsko kemijsko čišćenje automobila i ostalih vozila</li>
 </ul>
 <br>
+</div>
