--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,8 +2,10 @@
     <div class="container">
         <app-navigation></app-navigation>
     </div>
-    <div class="w3-container moje">
-        <router-outlet></router-outlet>
+    <div>
+        <div class="">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
 <app-footer></app-footer>
