--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,11 @@
-<div class="footer w3-container w3-indigo w3-padding-48 w3-padding-large">
+<div class="footer w3-container w3-indigo" style="padding:30px 0px">
     <div class="w3-cell-row moje">
     
-      <div class="w3-container w3-cell" >
-          <h4>KONTAKT</h4>
-        <p class="w3-small"><a href="https://goo.gl/maps/qM3R67rdME5wxDuX7"><i class="fas fa-map-marker-alt"></i> Bujska 36, Rijeka</a></p>
-        <p class="w3-small"><a href="tel:+385914182000"><i class="fas fa-mobile-alt"></i> +385 91 418 2000</a></p>
-       
-        <p class="w3-small">Radno vrijeme:<br>svakim danom 07-22</p>
+      <div class="w3-container w3-cell w3-center w3-large" >
+          <!--<h4>KONTAKT</h4>-->
+        <p style="margin:0px 0px 10px 0px;"><a href="https://goo.gl/maps/qM3R67rdME5wxDuX7"><i class="fas fa-map-marker-alt"></i> Bujska 36, Rijeka</a></p>
+        <p style="margin:0px 0px 10px 0px;"><a href="tel:+385914182000"><i class="fas fa-mobile-alt"></i> +385 91 418 2000</a></p>
+        <p style="margin:0px 0px 0px 0px;">Radno vrijeme:<br>svakim danom 07-22</p>
       </div>
     
       <div class="w3-container w3-cell w3-xlarge w3-center">
