--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,20 +1,21 @@
 <div class="footer w3-container w3-indigo" style="padding:30px 0px">
     <div class="w3-cell-row moje">
     
-      <div class="w3-container w3-cell w3-center w3-large" >
+      <div class="w3-container w3-cell w3-center w3-large" style="width:200px">
           <!--<h4>KONTAKT</h4>-->
         <p style="margin:0px 0px 10px 0px;"><a href="https://goo.gl/maps/qM3R67rdME5wxDuX7"><i class="fas fa-map-marker-alt"></i> Bujska 36, Rijeka</a></p>
-        <p style="margin:0px 0px 10px 0px;"><a href="tel:+385914182000"><i class="fas fa-mobile-alt"></i> +385 91 418 2000</a></p>
+        <p style="margin:0px 0px 10px 0px;"><a href="tel:+385914182000"><i class="fas fa-mobile-alt"></i> 091 418 2000</a></p>
         <p style="margin:0px 0px 0px 0px;">Radno vrijeme:<br>svakim danom 07-22</p>
       </div>
     
-      <div class="w3-container w3-cell w3-xlarge w3-center">
-        <h4>DRUŠTVENE MREŽE</h4>
-              <a href="https://www.facebook.com/profile.php?id=1165940456"><i class="fab fa-facebook"></i></a>
-              <a href="https://api.whatsapp.com/send?phone=+385914182000"><i class="fab fa-whatsapp w3-margin"></i></a>
-              <a href="viber://contact?number=+385914182000"><i class="fab fa-viber w3-margin-right"></i></a>
-              <a href="https://www.instagram.com/dama_wash/"><i class="fab fa-instagram"></i></a>
-        
+      <div class="w3-container w3-cell w3-xxlarge w3-center">
+        <!--<h4>DRUŠTVENE MREŽE</h4>-->
+        <div class="w3-row">
+              <a class="social-icons" href="https://www.facebook.com/profile.php?id=1165940456"><i class="fab fa-facebook"></i></a>
+              <a class="social-icons" href="https://api.whatsapp.com/send?phone=+385914182000"><i class="fab fa-whatsapp"></i></a>
+              <a class="social-icons" href="viber://contact?number=+385914182000"><i class="fab fa-viber"></i></a>
+              <a class="social-icons" href="https://www.instagram.com/dama_wash/"><i class="fab fa-instagram"></i></a>
+            </div>
       </div>
     
     </div>
