--- a/src/app/naslovna/naslovna.component.html
+++ b/src/app/naslovna/naslovna.component.html
@@ -42,8 +42,8 @@
 </div>
     
 <div class="container w3-margin-bottom moje"  style="text-align: center;">
-  <p style="font-size:20px">Nudimo i najam Karcher strojeva.</p>
-    <img class="w3-image" alt="Najam Karcher strojeva" title="Najam Karcher strojeva" src="assets/images/297573592_930676484519460_3984140162036203416_n.jpg">
+  <p style="font-size:20px">Nudimo i najam Kärcher strojeva.</p>
+    <img class="w3-image" alt="Najam Kärcher strojeva" title="Najam Kärcher strojeva" src="assets/images/297573592_930676484519460_3984140162036203416_n.jpg">
 </div>
 
 <div class="w3-panel nota w3-roboto moje" style="padding: 10px 20px;">
