--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -10,7 +10,7 @@
     
       <div class="w3-container w3-cell w3-xxlarge w3-center">
         <!--<h4>DRUŠTVENE MREŽE</h4>-->
-        <div class="w3-row">
+        <div class="" style="width: fit-content;float: right;">
               <a class="social-icons" href="https://www.facebook.com/profile.php?id=1165940456"><i class="fab fa-facebook"></i></a>
               <a class="social-icons" href="https://api.whatsapp.com/send?phone=+385914182000"><i class="fab fa-whatsapp"></i></a>
               <a class="social-icons" href="viber://contact?number=+385914182000"><i class="fab fa-viber"></i></a>
