--- a/src/app/navigation/navigation.component.scss
+++ b/src/app/navigation/navigation.component.scss
@@ -9,8 +9,8 @@
 .active-link{
   font-weight: bold;
 }
-.w3-bar-item:hover{
-  background: #006795;
+.w3-button:hover{
+  background: #006795;/*#00608a*/
 }
 .anim-left{
   position: relative;
