--- a/src/app/naslovna/naslovna.component.scss
+++ b/src/app/naslovna/naslovna.component.scss
@@ -6,3 +6,7 @@
 }
 @media only screen and (max-width: 600px) {
     .feature { width: 50%; }}
+.progress-bar{
+    height: 10px;
+    background: #0096d8;
+}
