--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -3,7 +3,7 @@
 <p class="w3-container w3-large">U cijene je uključen PDV.</p>
   <table class="w3-table" style="background-color: #0096d8;color:white;font-size:large">
     <tr style="background-color: #4d4b62">
-      <th>Objekt</th>
+      <th>Predmet</th>
       <th>Cijena</th>
     </tr>
     <tr>
@@ -12,39 +12,39 @@
     </tr>
     <tr>
       <td style="padding-left:30px">+ vanjsko čišćenje automobila</td>
-      <td>10 € (75.53 kn)</td>
+      <td>10 € (75,53 kn)</td>
     </tr>
     <tr>
       <td>Klasična i L garnitura</td>
-      <td>40/60 € (301.38/452.07 kn)</td>
+      <td>40/60 € (301,38/452,07 kn)</td>
     </tr>
     <tr>
       <td>Fotelja</td>
-      <td>25 € (188.36 kn)</td>
+      <td>25 € (188,36 kn)</td>
     </tr>
     <tr>
       <td>Dvosjed</td>
-      <td>35 € (263.71 kn)</td>
+      <td>35 € (263,71 kn)</td>
     </tr>
     <tr>
       <td>Stolica</td>
-      <td>3-6 € (22.60-45.21 kn)</td>
+      <td>3-6 € (22,60-45,21 kn)</td>
     </tr>
     <tr>
       <td>Trosjed, dvosjed i fotelja</td>
-      <td>80 € (602.76 kn)</td>
+      <td>80 € (602,76 kn)</td>
     </tr>
     <tr>
       <td>Poliranje farova (oba)</td>
-      <td>30-40 € (226.04-301.38 kn)</td>
+      <td>30-40 € (226,04-301,38 kn)</td>
     </tr>
     <tr>
       <td>Tepih</td>
-      <td>3-5 €/m² (22.60-37.67 kn)</td>
+      <td>3-5 €/m² (22,60-37,67 kn)</td>
     </tr>
     <tr>
       <td>Čišćenje kamena</td>
-      <td>2-5 €/m² (15.07-37.67 kn)</td>
+      <td>2-5 €/m² (15,07-37,67 kn)</td>
     </tr>
   </table>
   <p class="w3-center w3-padding">TEČAJ: 1 EUR = 7,53450 HRK</p>
