--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -1,27 +1,21 @@
 <div class="moje">
 <h2 class="w3-container">Kontaktirajte nas</h2>
 <div class="w3-container w3-xlarge w3-center">
-  <h4>Javite se putem društvenih mreža</h4>
-  <a href="https://www.facebook.com/profile.php?id=1165940456"><i class="fab fa-facebook largetext"></i></a>
-  <a href="https://api.whatsapp.com/send?phone=+385914182000"><i class="fab fa-whatsapp w3-margin largetext"></i></a>
-  <a href="viber://contact?number=+385914182000"><i class="fab fa-viber w3-margin-right largetext"></i></a>
-  <a href="https://www.instagram.com/dama_wash/"><i class="fab fa-instagram largetext"></i></a>
-  <h4>ili elektroničkom poštom</h4>
+  <h4>Nazovite nas ili nam pošaljite poruku:</h4>
+  <p style="margin-top:10px;margin-bottom: 20px;font-weight: bold;"><a href="tel:+385914182000" title="Broj mobitela"><i class="fas fa-mobile-alt"></i> 091 418 2000</a></p>
+  <a href="https://api.whatsapp.com/send?phone=+385914182000" title="WhatsApp"><i class="fab fa-whatsapp w3-margin-right largetext"></i></a>
+  <a href="viber://chat?number=+385914182000" title="Viber"><i class="fab fa-viber w3-margin-right largetext"></i></a>
+  <a href="https://www.facebook.com/profile.php?id=1165940456" title="Facebook"><i class="fab fa-facebook w3-margin-right largetext"></i></a>
+  <a href="https://www.instagram.com/dama_wash/" title="Instagram"><i class="fab fa-instagram largetext"></i></a>
+  <!--<h4>ili elektroničkom poštom</h4>-->
 </div>
-<div class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin">
+<!--<div class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin">
   <div class="w3-row w3-section">
     <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
       <div class="w3-rest">
         <input class="w3-input w3-border" name="first" type="text" [(ngModel)]="imePrezime" placeholder="Ime i prezime">
       </div>
   </div>
-
-  <!--<div class="w3-row w3-section">
-    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-envelope-o"></i></div>
-      <div class="w3-rest">
-        <input class="w3-input w3-border" name="email" type="text" placeholder="E-mail">
-      </div>
-  </div>-->
 
   <div class="w3-row w3-section">
     <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-phone"></i></div>
@@ -39,7 +33,7 @@
 
   <button class="w3-button w3-block w3-section w3-blue w3-ripple w3-padding" (click)="sendMail()">Otvori Gmail</button>
 
-</div>
+</div>-->
 <h3 class="w3-container">Naša lokacija:</h3>
 <div class="mapouter">
     <div class="gmap_canvas">
