--- a/src/styles.scss
+++ b/src/styles.scss
@@ -40,6 +40,12 @@ a{text-decoration: none;}
   left: 25%;
   transform: translate(-50%, +50%);
 }
+.bottom-center{
+  position: absolute;
+  bottom: 5%;
+  left: 50%;
+  transform: translate(-50%, +50%);
+}
 
 html, body, h1, h2, h3, h4, h5, h6 {
   /*font-family: "Roboto Slab", serif;*/
