--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,7 +4,7 @@
   <h4>Nazovite nas ili nam pošaljite poruku:</h4>
   <p style="margin-top:10px;margin-bottom: 20px;font-weight: bold;"><a href="tel:+385914182000" title="Broj mobitela"><i class="fas fa-mobile-alt"></i> 091 418 2000</a></p>
   <a href="https://api.whatsapp.com/send?phone=+385914182000" title="WhatsApp"><i class="fab fa-whatsapp w3-margin-right largetext"></i></a>
-  <a href="viber://chat?number=+385914182000" title="Viber"><i class="fab fa-viber w3-margin-right largetext"></i></a>
+  <a href="viber://chat?number=%2B385914182000" title="Viber"><i class="fab fa-viber w3-margin-right largetext"></i></a>
   <a href="https://www.facebook.com/profile.php?id=1165940456" title="Facebook"><i class="fab fa-facebook w3-margin-right largetext"></i></a>
   <a href="https://www.instagram.com/dama_wash/" title="Instagram"><i class="fab fa-instagram largetext"></i></a>
   <!--<h4>ili elektroničkom poštom</h4>-->
