--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -12,7 +12,7 @@
         <!--<h4>DRUŠTVENE MREŽE</h4>-->
         <div class="" style="width: fit-content;float: right;">
           <a class="social-icons" href="https://api.whatsapp.com/send?phone=+385914182000"><i class="fab fa-whatsapp"></i></a>
-          <a class="social-icons" href="viber://contact?number=+385914182000"><i class="fab fa-viber"></i></a>
+          <a class="social-icons" href="viber://chat?number=%2B385914182000"><i class="fab fa-viber"></i></a>
           <a class="social-icons" href="https://www.facebook.com/profile.php?id=1165940456"><i class="fab fa-facebook"></i></a>
           <a class="social-icons" href="https://www.instagram.com/dama_wash/"><i class="fab fa-instagram"></i></a>
         </div>
