--- a/src/app/naslovna/naslovna.component.html
+++ b/src/app/naslovna/naslovna.component.html
@@ -56,7 +56,7 @@
   <p>Ukoliko niste sigurni za cijenu, uslikajte i pošaljite određenu stvar za čišćenje, a mi ćemo Vam poslati besplatnu i neobaveznu ponudu u najkraćem mogućem roku!</p>
   <!-- <p>Uslikajte i pošaljite određenu stvar za čišćenje, a mi ćemo Vama poslati besplatnu i neobaveznu ponudu u najkraćem mogućem roku!</p> -->
   <p class="w3-center w3-large">
-    <a href="viber://contact?number=+385914182000" style="margin-right:10px"><span style="color:#c40db9;">Viber</span></a>
+    <a href="viber://chat?number=%2B385914182000" style="margin-right:10px"><span style="color:#c40db9;">Viber</span></a>
     |
      <a href="https://api.whatsapp.com/send?phone=+385914182000" style="margin:0px 10px"><span style="color:#61ff61;">WhatsApp</span></a>
     |
