dodao google recenzije i ostalo

--- a/src/app/prices/prices.component.html
+++ b/src/app/prices/prices.component.html
@@ -8,7 +8,7 @@
     </tr>
     <tr>
       <td>Dubinsko čišćenje automobila (sva sjedišta, pod, bunker)</td>
-      <td>70 € (527.42 kn)</td>
+      <td>80 € (602,76 kn)</td>
     </tr>
     <tr>
       <td style="padding-left:30px">+ vanjsko čišćenje automobila</td>
@@ -45,6 +45,10 @@
     <tr>
       <td>Čišćenje kamena</td>
       <td>2-5 €/m² (15,07-37,67 kn)</td>
+    </tr>
+    <tr>
+      <td>Klasično čišćenje apartmana, poslovnih prostora, kuća, plovila</td>
+      <td>Po dogovoru</td>
     </tr>
   </table>
   <p class="w3-center w3-padding">TEČAJ: 1 EUR = 7,53450 HRK</p>
