--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,42 +2,21 @@
 <h2 class="w3-container">Kontaktirajte nas</h2>
 <div class="w3-container w3-xlarge w3-center">
   <h4>Nazovite nas ili nam pošaljite poruku:</h4>
-  <p style="margin-top:10px;margin-bottom: 20px;font-weight: bold;"><a href="tel:+385914182000" title="Broj mobitela"><i class="fas fa-mobile-alt"></i> 091 418 2000</a></p>
+  <p style="margin-top:10px;margin-bottom: 20px;font-weight: bold;">
+    <a href="tel:+385914182000" title="Broj mobitela"><i class="fas fa-mobile-alt"></i> 091 418 2000</a>
+  </p>
   <a href="https://api.whatsapp.com/send?phone=+385914182000" title="WhatsApp"><i class="fab fa-whatsapp w3-margin-right largetext"></i></a>
   <a href="viber://chat?number=%2B385914182000" title="Viber"><i class="fab fa-viber w3-margin-right largetext"></i></a>
   <a href="https://www.facebook.com/profile.php?id=1165940456" title="Facebook"><i class="fab fa-facebook w3-margin-right largetext"></i></a>
-  <a href="https://www.instagram.com/dama_wash/" title="Instagram"><i class="fab fa-instagram largetext"></i></a>
-  <!--<h4>ili elektroničkom poštom</h4>-->
+  <a href="https://www.instagram.com/dubinsko_ciscenje_damawash/" title="Instagram"><i class="fab fa-instagram largetext"></i></a>
+  <p style="margin-top:10px;margin-bottom: 20px;font-weight: bold;"  class="w3-large">
+    <a href="mailto:info.damawash@gmail.com" title="E-mail"><i class="fas fa-envelope"></i> info.damawash@gmail.com</a>
+  </p>
 </div>
-<!--<div class="w3-container w3-card-4 w3-light-grey w3-text-blue w3-margin">
-  <div class="w3-row w3-section">
-    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-user"></i></div>
-      <div class="w3-rest">
-        <input class="w3-input w3-border" name="first" type="text" [(ngModel)]="imePrezime" placeholder="Ime i prezime">
-      </div>
-  </div>
-
-  <div class="w3-row w3-section">
-    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-phone"></i></div>
-      <div class="w3-rest">
-        <input class="w3-input w3-border" name="phone" type="text"[(ngModel)]="mobitel"  placeholder="Mobitel/telefon (neobavezno)">
-      </div>
-  </div>
-
-  <div class="w3-row w3-section">
-    <div class="w3-col" style="width:50px"><i class="w3-xxlarge fa fa-pencil"></i></div>
-      <div class="w3-rest">
-        <textarea class="w3-input w3-border" name="message" type="text"[(ngModel)]="poruka"  placeholder="Poruka" rows="4"></textarea>
-      </div>
-  </div>
-
-  <button class="w3-button w3-block w3-section w3-blue w3-ripple w3-padding" (click)="sendMail()">Otvori Gmail</button>
-
-</div>-->
 <h3 class="w3-container">Naša lokacija:</h3>
 <div class="mapouter">
     <div class="gmap_canvas">
-        <iframe width="100%" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Bujska%2036%2C%20Rijeka&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+        <iframe width="100%" height="500" id="gmap_canvas" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2804.368955612431!2d14.380548976624734!3d45.34136394162563!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4764a6e40d6154f3%3A0x9f556c1c550e720e!2zRGFtYXdhc2ggZHViaW5za28gxI1pxaHEh2VuamU!5e0!3m2!1shr!2shu!4v1701337207312!5m2!1shr!2shu" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
     <style>.mapouter{position:relative;text-align:right;margin-bottom: 20px;}.gmap_canvas {overflow:hidden;background:none!important; }</style>
 </div>
