--- a/src/app/naslovna/naslovna.component.html
+++ b/src/app/naslovna/naslovna.component.html
@@ -1,3 +1,16 @@
+<script type="application/ld+json">
+  {
+    "@context": "http://schema.org",
+    "@type": "WebSite",
+    "name": "Damawash dubinsko čišćenje",
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "5.0",
+      "reviewCount": "16"
+    }
+  }
+</script>
+  
 <div class="w3-roboto w3-large">
     <div style="text-align: center;background: #21bbff;color:white" class="w3-padding-16 ">
         <!--<span style="font-size: larger;padding:10px">Nudimo profesionalne usluge čišćenja koje obavljamo koristeći najmodernije strojeve i ekološka sredstva za čišćenje.</span>-->
@@ -7,6 +20,33 @@
         <!--<br><br>Slobodno nam se obratite s povjerenjem, a mi ćemo Vam uzvratiti kvalitetnom i profesionalnom uslugom.-->
     </div>
 </div>
+<!--<div style="max-width: 900px;margin-bottom:20px;margin-top: 20px;" class="w3-content">
+  <div style="text-align: center;font-size: x-large;">
+    Dubinski čistimo:
+  </div>
+  <div id="slidecontainer">
+    <div id="slide">
+      <div class="feature2">Automobile</div>
+      <div class="feature2">Garniture</div>
+      <div class="feature2">Fotelje</div>
+      <div class="feature2">Dvosjede</div>
+      <div class="feature2">Trosjede</div>
+      <div class="feature2">Stolice</div>
+      <div class="feature2">Tepihe</div>
+      <div class="feature2">Kamen</div>
+      <div class="feature2">Automobile</div>
+      <div class="feature2">Garniture</div>
+      <div class="feature2">Fotelje</div>
+      <div class="feature2">Dvosjede</div>
+      <div class="feature2">Trosjede</div>
+      <div class="feature2">Stolice</div>
+      <div class="feature2">Tepihe</div>
+      <div class="feature2">Kamen</div>
+    </div>
+  </div>
+</div>-->
+
+
 <div style="max-width: 900px;margin-bottom:20px;margin-top: 20px;" class="w3-content">
   <div style="text-align: center;font-size: x-large;">
     Dubinski čistimo:
@@ -21,6 +61,7 @@
     <div class="w3-quarter w3-container feature">Tepihe</div>
     <div class="w3-quarter w3-container feature">Kamen</div>
   </div>
+  <p class="w3-padding w3-xlarge w3-center" style="margin-top:0px">Nudimo i klasično čišćenje apartmana, poslovnih prostora, kuća, plovila.</p>
 </div>
 <img hidden *ngFor="let img of images;" [src]="img" (load)="loaded()" />
 <div class="w3-content w3-display-container slike" style="max-width:900px;overflow:hidden"><!--max-height:480px;-->
@@ -37,13 +78,13 @@
     <div class="centrirano w3-text-white w3-container w3-padding-32">
       <span class="w3-padding-large" #firsttext></span>
     </div>
-    <div class="bottom-center w3-text-white w3-container w3-padding-32">
+    <div class="bottom-center w3-text-white w3-container w3-padding-32" style="display:none;">
       <span class="w3-padding-large" style="font-size:20px">{{slideIndex+1}}/{{images.length-1}}</span>
     </div>
   </div>
 <!--<button class="w3-button w3-light-grey noselection w3-display-left" onclick="plusDivs(-1)">❮</button>
 <button class="w3-button w3-light-grey noselection w3-display-right" onclick="plusDivs(+1)">❯</button>-->
-<div class="progress-bar" [style.width]="((precentage/timeDelay)*100) + '%'"></div>
+<div class="progress-bar" [style.width]="((precentage/timeDelay)*100) + '%'"  style="display:none;"></div>
 </div>
     
 <div class="container w3-margin-bottom moje"  style="text-align: center;">
@@ -62,6 +103,9 @@
     |
       <a href="http://m.me/1165940456" style="margin-left:10px"><span style="color:#8ee3ff;">Messenger</span></a>
     </p>
-</div>
+
+  </div>
+  <div class='sk-ww-google-reviews' data-embed-id='234615'></div>
+  <iframe src='https://widgets.sociablekit.com/google-reviews/iframe/234615' frameborder='0' width='100%' height='600'></iframe>
     
     <!--<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=Vukovarska%2018%2C%20Rijeka&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.pureblack.de">Pureblack.de - Webseite erstellen lassen</a></div><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>-->
