--- a/src/app/naslovna/naslovna.component.scss
+++ b/src/app/naslovna/naslovna.component.scss
@@ -10,3 +10,30 @@
     height: 10px;
     background: #0096d8;
 }
+@keyframes slide {
+    from {left:0px;}
+    to {left:-1600px;}
+  }
+  #slidecontainer{
+    position: relative;
+    overflow: hidden;
+    width: 100%;
+    height: 60px;
+  }
+#slide {
+    height: 60px;
+    animation-name: slide;
+    animation-duration: 10s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    position: absolute;
+}
+.feature2{
+    float:left;
+    text-align: center;
+    padding: 10px;
+    font-size: x-large;
+    font-weight: bold;
+    width:200px;
+    border:1px solid black;
+}
